<resources>
    <string name="app_name">Laboratorio 4</string>
    <string name="dia_cumple">Jueves</string>
    <string name="fecha_cumple">07 de julio</string>
    <string name="nombre_res">The Choice</string>
    <string name="direccion_res">5ta calle Lote 68 Bosques de Santa Lucia Milpas Altas, Santa Lucia</string>
    <string name="horario_res">8:30am - 20:00pm</string>
    <string name="boton_iniciar">Iniciar</string>
    <string name="boton_detalles">Detalles</string>
    <string name="terminar_jornada">Terminar jornada</string>
    <string name="actualizacion">Actualizacion disponible</string>
    <string name="descargar">Descargar</string>
    <string name="todo">TODO</string>
</resources>