<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/celeste"
        android:backgroundTint="#B5EAF1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="visible">


        <ImageView
            android:id="@+id/imageView"

            android:layout_width="39dp"
            android:layout_height="41dp"
            android:contentDescription="@string/todo"
            android:translationX="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/actualizacion"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/actualizacion"
            android:textColor="#455A64"
            android:textSize="12sp"
            android:textStyle="bold"
            android:translationX="15dp"
            android:translationY="11dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descargar"
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:translationX="120dp"
            android:translationY="11dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="3dp"
        android:translationY="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="198dp"
            android:layout_height="79dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dia_cumple"
                android:textSize="25sp"
                android:textStyle="bold"
                android:translationX="15dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_cumple"
                android:textSize="15sp"
                android:translationX="15dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button7"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terminar_jornada"
            android:textColor="@color/purple_200"
            android:translationX="-40dp"
            android:translationY="30dp"
            app:strokeColor="@color/grisito" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="370dp"
        android:layout_height="246dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="306dp"
        android:background="#fff"
        android:elevation="100dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:translationX="15dp"
        android:translationY="10dp"
        android:translationZ="100dp"
        app:barrierMargin="100dp"
        android:outlineProvider="bounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_marginBaseline="12dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_res"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:translationX="-50dp" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion_res"
                android:textSize="13sp"
                android:translationY="10dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horario_res"
                android:textColor="@color/grisito"
                android:textSize="13sp"
                android:translationY="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:translationY="10dp">

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF5722"
                android:text="@string/boton_detalles"
                android:textColor="@color/naranja"
                android:translationX="200dp" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="129dp"

                android:layout_height="wrap_content"
                android:background="@color/naranja"
                android:backgroundTint="@color/naranja"

                android:text="@string/boton_iniciar"
                android:textColor="#FFFFFF"
                android:translationX="-75dp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>